# ui-verdict

./: .gitignore  OMNIPARSER_INTEGRATION.md  README.md  action.yml  pyproject.toml
.github/workflows/: example.yml  visual-regression.yml
docker/omniparser/: README.md  docker-compose.yml
scripts/: README.md  omniparser_server.py  start_server.sh  test_omniparser.py
src/ui_verdict/: __init__.py  action.py  capture.py  cli.py  input.py  models.py  qa_agent.py  server.py  server_agentic.py  server_vm.py  verify.py  vm.py
src/ui_verdict/baseline/: __init__.py  compare.py  models.py  store.py
src/ui_verdict/diff/: __init__.py  classify.py  flow.py  heatmap.py  pixel.py
src/ui_verdict/metrics/: __init__.py  contrast.py  layout.py
src/ui_verdict/qa_agent/: __init__.py  __main__.py  checks.py  context.py  desktop_executor.py  executor.py  executor_protocol.py  logging_config.py  models.py  omniparser.py  report.py  server.py  vision.py  web_executor.py
src/ui_verdict/qa_agent/midscene/: executor.js  package-lock.json  package.json  test.js  test_ai.js
src/ui_verdict/vision/: __init__.py  ollama.py
tests/: test_action.py  test_baseline.py  test_cli.py  test_diff.py  test_heatmap.py  test_qa_agent.py  test_verify.py  test_vm.py  test_web_executor.py
